--- a/csgo.toml
+++ b/csgo.toml
@@ -1,4 +1,4 @@
-timestamp = 1667067915
+timestamp = 1719247154
 
 [signatures]
 anim_overlays = 10640
@@ -7,7 +7,7 @@ clientstate_delta_ticks = 372
 clientstate_last_outgoing_command = 19756
 clientstate_net_channel = 156
 convar_name_hash_table = 197024
-dwClientState = 5894548
+dwClientState = 5894556
 dwClientState_GetLocalPlayer = 384
 dwClientState_IsHLTV = 19784
 dwClientState_Map = 652
@@ -16,43 +16,49 @@ dwClientState_MaxPlayer = 904
 dwClientState_PlayerInfo = 21184
 dwClientState_State = 264
 dwClientState_ViewAngles = 19856
-dwEntityList = 81772116
-dwForceAttack = 52599996
-dwForceAttack2 = 52600008
-dwForceBackward = 52599912
-dwForceForward = 52600044
-dwForceJump = 86735836
-dwForceLeft = 52599924
-dwForceRight = 52599936
-dwGameDir = 6532480
-dwGameRulesProxy = 87208972
-dwGetAllClasses = 14712796
-dwGlobalVars = 5893720
-dwGlowObjectManager = 87386384
-dwInput = 86348840
-dwInterfaceLinkList = 10064212
-dwLocalPlayer = 14575972
-dwMouseEnable = 86200456
-dwMouseEnablePtr = 86200408
-dwPlayerResource = 52592640
-dwRadarBase = 86190380
-dwSetClanTag = 580224
-dwViewMatrix = 81710212
-dwWeaponTable = 86353156
+dwEntityList = 81809884
+dwForceAttack = 52637732
+dwForceAttack2 = 52637744
+dwForceBackward = 52637816
+dwForceForward = 52637804
+dwForceJump = 86773584
+dwForceLeft = 52637828
+dwForceRight = 52637840
+dwGameDir = 6532608
+dwGameRulesProxy = 87246692
+dwGetAllClasses = 14749572
+dwGlobalVars = 5893728
+dwGlowObjectManager = 87424184
+dwInput = 86386608
+dwInterfaceLinkList = 10090452
+dwLocalPlayer = 14612860
+dwMouseEnable = 86238224
+dwMouseEnablePtr = 86238176
+dwPlayerResource = 52630400
+dwRadarBase = 86228148
+dwSensitivity = 14629784
+dwSensitivityPtr = 14629784
+dwSetClanTag = 580272
+dwViewMatrix = 81748004
+dwWeaponTable = 86390924
 dwWeaponTableIndex = 12908
-dwbSendPackets = 905106
+dwYawPtr = 14629160
+dwZoomSensitivityRatioPtr = 14652312
+dwbSendPackets = 905938
 dwppDirect3DDevice9 = 680640
-find_hud_element = 805886448
+find_hud_element = 1491876416
+force_update_spectator_glow = 4051098
 interface_engine_cvar = 260764
-is_c4_owner = 4082080
+is_c4_owner = 4106400
 m_bDormant = 237
 m_bIsLocalPlayer = 13864
 m_flSpawnTime = 66496
 m_pStudioHdr = 10576
-m_pitchClassPtr = 86200192
-model_ambient_min = 5902732
-set_abs_angles = 1986704
-set_abs_origin = 1986256
+m_pitchClassPtr = 86237960
+m_yawClassPtr = 14629160
+model_ambient_min = 5902740
+set_abs_angles = 2009424
+set_abs_origin = 2008976
 
 [netvars]
 cs_gamerules_data = 0
